== 0.5.3 2015-05-07

* Improvements
  * Support for ActiveRecord 4.2
* Docs
  * README formatting fixed (Usage with Rails section)
* Bug fixes
  * Force to convert String type value as real string to avoid error when used JRuby and for VARCHAR2 parameter is assigned non String value
  * Fix dbms_output functionality in case when database exception is raised
* Internal (development) improvements
  * Vagrant box provisioning added

== 0.5.2 2014-10-23

* Bug fixes
  * Use all_procedures.object_type only if Oracle versions < 11g (regression in 0.5.1, affecting Oracle < 11g)

== 0.5.1 2014-10-12

* Improvements
  * Support for Oracle Ehnanced Adapter 1.5 and ActiveRecord 4.1, 4.2
  * Oracle 12c support
  * Better diagnostics output when ruby-oci8 initialization fails
* Bug fixes
  * Support for ruby-oci8 2.1.2+ preventing segfaults
  * Multi-thread support (applies to oci8 connections)
* Internal (development) improvements
  * Tests database connection enhancements (eazy connect syntax, allow service name != db name)
  * Tests migrated to rspec 3
  * Tests coverage migrated from rcov to simplecov
  * README update with how to run tests

== 0.5.0 2012-04-16

* Improvements
  * Support for ruby-oci8 2.1.0 and ActiveRecord 3.2
  * Tested with Ruby 1.9.3
  * Tests migrated to RSpec 2
  * Use ojdbc6.jar or ojdbc5.jar JDBC drivers when using JRuby
* Bug fixes
  * Fixed clearing of global temp tables before procedure calls
  * Fixed passing NULL value for CLOB type arguments
  * Fixed procedure call that returns array of records
  * Fixed support for NCHAR and NVARCHAR argument types
  * Accept any ActiveRecord inherited model class for activerecord_class= method

== 0.4.4 2010-10-06

* Improvements
  * When using plsql.connect! then set session time zone from ENV['TZ'] or from :time_zone option
* Bug fixes
  * Bugfix for case when object is in invalid state but has no errors
  * Support ref cursor return value with type defined inside package

== 0.4.3 2010-03-25
