@@ -11,3 +11,5 @@ sqlnet.log
 Gemfile.lock
 *.zip
 .vagrant
+.idea
+spec/support/custom_config.rb
