@@ -7,7 +7,6 @@ describe "Connection" do
   before(:all) do
     @raw_conn = get_connection
     @conn = PLSQL::Connection.create( @raw_conn )
-    @conn.set_time_zone
   end
 
   after(:all) do
@@ -25,7 +24,6 @@ describe "Connection" do
 
     before(:each) do
       @conn1 = PLSQL::Connection.create( @raw_conn1 )
-      @conn1.set_time_zone
     end
 
     it "should create connection" do
@@ -468,7 +466,6 @@ describe "Connection" do
     def reconnect_connection
       @raw_conn = get_connection
       @conn = PLSQL::Connection.create( @raw_conn )
-      @conn.set_time_zone
     end
 
     it "should drop current session ruby temporary tables" do
